feat: add nestjs server
- set up proxy conf to in angular app to call nestjs server
- create nestjs server
- consume nestjs server

--- a/apps/monorepos/src/app/app.component.html
+++ b/apps/monorepos/src/app/app.component.html
@@ -1,2 +1,6 @@
 <h2>Monorepo application</h2>
 <monorepos-header></monorepos-header>
+
+<ul *ngIf="technology$ | async as technologies">
+  <li *ngFor="let technology of technologies">{{ technology }}</li>
+</ul>
