chore: add compodoc and configure storybook to use it

--- a/libs/reusable-components/src/lib/header/header.component.html
+++ b/libs/reusable-components/src/lib/header/header.component.html
@@ -3,7 +3,12 @@
     <li>Home</li>
     <li>MyAccount</li>
     <li class="search">
-      <input type="text" class="search-input" placeholder="Search" />
+      <input
+        type="text"
+        class="search-input"
+        [placeholder]="searchPlaceHolder"
+      />
     </li>
+    <button *ngIf="displayButton">Search</button>
   </ul>
 </nav>
